[package]
name = "sc-chain-spec-derive"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Macros to derive chain spec extension traits implementation."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
getrandom = { version = "0.2.2", features = ["js"] }
proc-macro-crate = "0.1.4"
proc-macro2 = "1.0.6"
quote = "1.0.3"
syn = "1.0.58"

[dev-dependencies]
